# git-opr

./: .gitignore  pyproject.toml  requirments.txt
api/: app.py
api/src/: __init__.py
api/src/db/: __init__.py  git_db.py
api/src/models/: task.py
api/src/repositories/: __init__.py  task_manager.py
api/src/utils/: __init__.py  config.py  logger.py
server/: main.py
server/src/: __init__.py
server/src/db/: __init__.py  gitDatabase.py  repos_file.py
server/src/exceptions/: exceptions.py
server/src/models/: repos_file.py  requests.py  responses.py  tasks.py
server/src/routes/: file_routes.py  file_system_routes.py  folder_routes.py  git_routes.py  repos_route.py  task_routes.py
server/src/services/: lifespan_functions.py  task_manager.py
server/src/utils/: __init__.py  auth_middleware.py  config.py  log_formats.py  logger.py
